--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  /* font-family: 'Poppins', sans-serif;
+  background-color: #1f1f38;
+   line-height: 1.7;
+  background-image: url(../src/assets/bg-texture.png); */
+}
 
 @keyframes slide-left-to-right {
     0% {
